// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing DeleteActivity component should call the deleteActivity actions with { id: 1 } 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="form primary-form form-delete"
      >
        <p>
          <b>
            Delete Activity
          </b>
        </p>
        <form
          class=""
        >
          <div
            class="secondary-container"
            data-testid="id-deleteActivity"
          >
            <label
              for="id"
            >
              <p
                class="secondary-label"
              >
                <b>
                  Id
                </b>
              </p>
              <input
                class="textField undefined"
                datatestid="id-deleteActivity"
                id="id"
                name="id"
                placeholder="Insert Id"
                type="numbers"
                value="1"
                variant="secondary"
              />
            </label>
            <div
              class="error"
            >
              <span
                class="message-error undefined small"
              >
                <b />
              </span>
            </div>
          </div>
          <input
            class="submit primary-submit delete-submit"
            data-testid="submit-deleteActivity"
            datatestid="submit-deleteActivity"
            type="submit"
            value="Delete"
          />
          <div
            class="error-id"
          >
            <span
              class="message-error undefined medium"
            >
              <b />
            </span>
          </div>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="form primary-form form-delete"
    >
      <p>
        <b>
          Delete Activity
        </b>
      </p>
      <form
        class=""
      >
        <div
          class="secondary-container"
          data-testid="id-deleteActivity"
        >
          <label
            for="id"
          >
            <p
              class="secondary-label"
            >
              <b>
                Id
              </b>
            </p>
            <input
              class="textField undefined"
              datatestid="id-deleteActivity"
              id="id"
              name="id"
              placeholder="Insert Id"
              type="numbers"
              value="1"
              variant="secondary"
            />
          </label>
          <div
            class="error"
          >
            <span
              class="message-error undefined small"
            >
              <b />
            </span>
          </div>
        </div>
        <input
          class="submit primary-submit delete-submit"
          data-testid="submit-deleteActivity"
          datatestid="submit-deleteActivity"
          type="submit"
          value="Delete"
        />
        <div
          class="error-id"
        >
          <span
            class="message-error undefined medium"
          >
            <b />
          </span>
        </div>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`testing DeleteActivity component shouldn't call the deleteActivity actions when id field is blank 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="form primary-form form-delete"
      >
        <p>
          <b>
            Delete Activity
          </b>
        </p>
        <form
          class=""
        >
          <div
            class="secondary-container"
            data-testid="id-deleteActivity"
          >
            <label
              for="id"
            >
              <p
                class="secondary-label"
              >
                <b>
                  Id
                </b>
              </p>
              <input
                class="textField undefined"
                datatestid="id-deleteActivity"
                id="id"
                name="id"
                placeholder="Insert Id"
                type="numbers"
                value=""
                variant="secondary"
              />
            </label>
            <div
              class="error"
            >
              <span
                class="message-error undefined small"
              >
                <b />
              </span>
            </div>
          </div>
          <input
            class="submit primary-submit delete-submit"
            data-testid="submit-deleteActivity"
            datatestid="submit-deleteActivity"
            type="submit"
            value="Delete"
          />
          <div
            class="error-id"
          >
            <span
              class="message-error undefined medium"
            >
              <b>
                Id is required
              </b>
            </span>
          </div>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="form primary-form form-delete"
    >
      <p>
        <b>
          Delete Activity
        </b>
      </p>
      <form
        class=""
      >
        <div
          class="secondary-container"
          data-testid="id-deleteActivity"
        >
          <label
            for="id"
          >
            <p
              class="secondary-label"
            >
              <b>
                Id
              </b>
            </p>
            <input
              class="textField undefined"
              datatestid="id-deleteActivity"
              id="id"
              name="id"
              placeholder="Insert Id"
              type="numbers"
              value=""
              variant="secondary"
            />
          </label>
          <div
            class="error"
          >
            <span
              class="message-error undefined small"
            >
              <b />
            </span>
          </div>
        </div>
        <input
          class="submit primary-submit delete-submit"
          data-testid="submit-deleteActivity"
          datatestid="submit-deleteActivity"
          type="submit"
          value="Delete"
        />
        <div
          class="error-id"
        >
          <span
            class="message-error undefined medium"
          >
            <b>
              Id is required
            </b>
          </span>
        </div>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`testing DeleteActivity component shouldn't call the deleteActivity actions when there is no activity 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="form primary-form form-delete"
      >
        <p>
          <b>
            Delete Activity
          </b>
        </p>
        <form
          class=""
        >
          <div
            class="secondary-container"
            data-testid="id-deleteActivity"
          >
            <label
              for="id"
            >
              <p
                class="secondary-label"
              >
                <b>
                  Id
                </b>
              </p>
              <input
                class="textField undefined"
                datatestid="id-deleteActivity"
                id="id"
                name="id"
                placeholder="Insert Id"
                type="numbers"
                value="1"
                variant="secondary"
              />
            </label>
            <div
              class="error"
            >
              <span
                class="message-error undefined small"
              >
                <b />
              </span>
            </div>
          </div>
          <input
            class="submit primary-submit delete-submit"
            data-testid="submit-deleteActivity"
            datatestid="submit-deleteActivity"
            type="submit"
            value="Delete"
          />
          <div
            class="error-id"
          >
            <span
              class="message-error undefined medium"
            >
              <b />
            </span>
          </div>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="form primary-form form-delete"
    >
      <p>
        <b>
          Delete Activity
        </b>
      </p>
      <form
        class=""
      >
        <div
          class="secondary-container"
          data-testid="id-deleteActivity"
        >
          <label
            for="id"
          >
            <p
              class="secondary-label"
            >
              <b>
                Id
              </b>
            </p>
            <input
              class="textField undefined"
              datatestid="id-deleteActivity"
              id="id"
              name="id"
              placeholder="Insert Id"
              type="numbers"
              value="1"
              variant="secondary"
            />
          </label>
          <div
            class="error"
          >
            <span
              class="message-error undefined small"
            >
              <b />
            </span>
          </div>
        </div>
        <input
          class="submit primary-submit delete-submit"
          data-testid="submit-deleteActivity"
          datatestid="submit-deleteActivity"
          type="submit"
          value="Delete"
        />
        <div
          class="error-id"
        >
          <span
            class="message-error undefined medium"
          >
            <b />
          </span>
        </div>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
